--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -186,7 +186,7 @@
   <!-- end section2 tentang saya -->
 
   <!-- section3 keahlian -->
-  <div id="keahlian" class="image-skill">
+  <div id="keahlian" class="bg-fixed bg-center bg-cover opacity-80" style="background-image: url('https://images.unsplash.com/photo-1515879218367-8466d910aaa4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80.jpg');" >
     <div class="container px-4 py-24 m-auto lg:px-20 dark:brightness-100">
       <h2 class="text-4xl font-semibold text-white dark:text-slate-200">Keahlian</h2>
       <hr class="h-1 mt-6 bg-white w-28 dark:bg-slate-200">
@@ -232,7 +232,6 @@
           <img class="m-auto " src="https://www.vectorlogo.zone/logos/mysql/mysql-ar21.svg" alt="">
           <p class="m-auto text-mysql-color">Mysql</p>
         </div>
-        
       </div>
     </div>
   </div>
