add whatsapp link

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
               @click="toggle = !toggle; hamburger = !hamburger;"
               @click.away="toggle = false"
               class="scale-75 hamburger hamburger--emphatic" 
-              :class=" toggle ? 'is-active' : '' "
+              :class=" toggle || hamburger ? 'is-active' : '' "
               type="button"
             >
               <span class="hamburger-box">
@@ -368,7 +368,7 @@
         <div class="px-2">
           <h3 class="text-xl font-semibold">Kontak</h3>
           <hr class="h-1 mt-4 mb-4 w-28 bg-fuchsia-600">
-          <a class="block mb-3" href="">+62 8214 7554 549</a>
+          <a class="block mb-3" target="_blank" href="https://wa.me/+6282147554549?text=">+62 8214 7554 549</a>
           <a class="block mb-3" href="">jufrontamoama@gmail.com</a>
         </div>
 
