--- a/src/index.html
+++ b/src/index.html
@@ -369,7 +369,7 @@
           <h3 class="text-xl font-semibold">Kontak</h3>
           <hr class="h-1 mt-4 mb-4 w-28 bg-fuchsia-600">
           <a class="block mb-3" target="_blank" href="https://wa.me/+6282147554549?text=">+62 8214 7554 549</a>
-          <a class="block mb-3" href="">jufrontamoama@gmail.com</a>
+          <a class="block mb-3" target="_blank" href="mailto:jufrontamoama@gmail.com">jufrontamoama@gmail.com</a>
         </div>
 
         <div class="px-2">
