menghapus sementara bagian projek

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <a href="#tentang" class="flex items-center px-4 py-5 transition duration-500 md:justify-center hover:text-fuchsia-600 hover:bg-fuchsia-100 rounded-xl dark:hover:bg-slate-700 dark:text-slate-200" data-aos="zoom-in" data-aos-duration="1000">Tentang</a>
             <a href="#keahlian" class="flex items-center px-4 py-5 transition duration-500 md:justify-center hover:text-fuchsia-600 hover:bg-fuchsia-100 rounded-xl dark:hover:bg-slate-700 dark:text-slate-200" data-aos="zoom-in" data-aos-duration="1000">Keahlian</a>
             <a href="#sertifikat" class="flex items-center px-4 py-5 transition duration-500 md:justify-center hover:text-fuchsia-600 hover:bg-fuchsia-100 rounded-xl dark:hover:bg-slate-700 dark:text-slate-200" data-aos="zoom-in" data-aos-duration="1000">Sertifikat</a>
-            <a href="#projek" class="flex items-center px-4 py-5 transition duration-500 md:justify-center hover:text-fuchsia-600 hover:bg-fuchsia-100 rounded-xl dark:hover:bg-slate-700 dark:text-slate-200" data-aos="zoom-in" data-aos-duration="1000">Projek</a>
+            <!-- <a href="#projek" class="flex items-center px-4 py-5 transition duration-500 md:justify-center hover:text-fuchsia-600 hover:bg-fuchsia-100 rounded-xl dark:hover:bg-slate-700 dark:text-slate-200" data-aos="zoom-in" data-aos-duration="1000">Projek</a> -->
             <a href="#hubungi" class="flex items-center px-4 py-5 transition duration-500 md:justify-center hover:text-fuchsia-600 hover:bg-fuchsia-100 rounded-xl dark:hover:bg-slate-700 dark:text-slate-200" data-aos="zoom-in" data-aos-duration="1000">Hubungi</a>
           </div>
         </div>
@@ -267,7 +267,8 @@
   <!-- end sertifikat 4-->
 
   <!-- section5 projek -->
-  <div id="projek" class="bg-slate-100 dark:bg-slate-800">
+
+  <!-- <div id="projek" class="bg-slate-100 dark:bg-slate-800">
     <div class="container px-4 py-24 m-auto lg:px-20">
       <h2 class="text-4xl font-semibold dark:text-slate-200" data-aos="fade-down" data-aos-duration="2000">Projek Saya</h2>
       <hr class="h-1 mt-6 w-28 bg-fuchsia-600" data-aos="fade-down" data-aos-duration="2000">
@@ -328,7 +329,8 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+
   <!-- end section5 projek -->
 
   <!-- section6 Hubungi -->
@@ -363,7 +365,7 @@
           <a class="block mb-3 transition duration-500 hover:text-fuchsia-600" href="#tentang">Tentang</a>
           <a class="block mb-3 transition duration-500 hover:text-fuchsia-600" href="#keahlian">Keahlian</a>
           <a class="block mb-3 transition duration-500 hover:text-fuchsia-600" href="#sertifikat">Sertifikat</a>
-          <a class="block mb-3 transition duration-500 hover:text-fuchsia-600" href="#projek">Projek</a>
+          <!-- <a class="block mb-3 transition duration-500 hover:text-fuchsia-600" href="#projek">Projek</a> -->
         </div>
 
         <div class="px-2" data-aos="fade-down" data-aos-duration="2000">
