--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio | Jufron Tamo Ama</title>
-  <link rel="stylesheet" href="css/all-min.css">
+  <!-- <link rel="stylesheet" href="css/all-min.css"> -->
+  <link rel="stylesheet" href="/dist/output.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/hamburgers.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -154,8 +155,8 @@
         </div>
       </div>
       <div class="md:pt-10 sm:pt-0 md:max-w-xl lg:mr-20" data-aos="fade-left">
-        <div class="m-auto mt-5 sm:w-96 sm:h-[400px] md:h-[550px] md:w-[380px]">
-          <img class="object-cover w-full h-full bg-center" src="img/[removal.ai]_tmp-633aa61aee7f3.png" alt="image">
+        <div class="m-auto mt-5 sm:w-96 sm:h-[400px] md:h-[550px] md:w-[480px]">
+          <img class="object-cover w-full h-full bg-center" src="img/foto_profile-removebg-preview.png" alt="image">
         </div>
       </div>
     </div>
@@ -169,17 +170,17 @@
       <hr class="h-1 mt-6 w-28 bg-fuchsia-600" data-aos="fade-down" data-aos-duration="2000">
   
       <div class="pt-[410px] md:pt-[175px] relative xl:w-[860px] xl:m-auto" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
-        <div class="p-10 my-5 bg-fuchsia-100 rounded-3xl dark:bg-fuchsia-900">
+        <div class="p-10 my-5 bg-slate-100 rounded-3xl dark:bg-slate-800">
           <div class="grid grid-cols-1 md:grid-cols-2">
             <div class="w-[300px] md:ml-0 absolute top-0 md:top-0" data-aos="zoom-in-down">
               <img class="object-cover w-full h-full mx-auto bg-center" src="img/[removal.ai]_tmp-633ae511b00f7.png" alt="">
             </div>
             <div class="md:col-start-2">
               <p class="leading-loose dark:text-slate-200">
-                Lulusan S1 Komputer dan pengetahuan di bidang IT, dengan keahlian graphic designer dan programing, memiliki kemauan untuk mempelajari hal-hal baru yang berhubungan dengan bidang keahlian dan berpikir kreatif.
+                Lulusan S1 Komputer dengan pengetahuan mendalam di bidang Teknologi Informasi. Saya memiliki keahlian khusus dalam desain grafis dan pemrograman, dua bidang yang saling melengkapi untuk menciptakan solusi kreatif dan efektif. Selama studi dan pengalaman profesional saya, saya telah mengasah kemampuan saya dalam berbagai aspek desain dan pengembangan, dari menciptakan antarmuka pengguna yang intuitif hingga mengembangkan aplikasi yang kompleks dan efisien.
               </p>
             </div>
-          </div>
+          </div>            
         </div>
       </div>
     </div>
@@ -193,27 +194,27 @@
       <hr class="h-1 mt-6 bg-white w-28 dark:bg-slate-200" data-aos="fade-down" data-aos-duration="2000">
 
       <div class="mt-20 grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 lg:w-[53rem] md:w-[45rem] m-auto gap-3 md:gap-5">
-        <div class="flex flex-col py-7 md:py-10 text-html-color backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000">
+        <div class="flex flex-col py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000">
           <i class="m-auto fa-brands fa-html5 fa-3x lg:fa-4x"></i>
           <p class="m-auto">HTML</p>
         </div>
-        <div class="flex flex-col py-7 md:py-10 text-css-color backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="100">
+        <div class="flex flex-col py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="100">
           <i class="m-auto fa-brands fa-css3-alt fa-3x"></i>
           <p class="m-auto">CSS</p>
         </div>
-        <div class="flex flex-col text-js-color py-7 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="200">
+        <div class="flex flex-col text-js-color py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="200">
           <i class="m-auto fa-brands fa-square-js fa-3x"></i>
           <p class="m-auto">Javascript</p>
         </div>
-        <div class="flex flex-col text-nodejs-color py-7 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
+        <div class="flex flex-col text-nodejs-color py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="300">
           <i class="m-auto fa-brands fa-node-js fa-3x"></i>
           <p class="m-auto">Node Js</p>
         </div>
-        <div class="flex flex-col text-php-color py-7 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="400">
+        <div class="flex flex-col text-php-color py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="400">
           <i class="m-auto fa-brands fa-php fa-3x"></i>
           <p class="m-auto">PHP</p>
         </div>
-        <div class="flex flex-col text-bootstrap-color py-7 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="500">
+        <div class="flex flex-col text-bootstrap-color py-7 dark:text-slate-200 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="500">
           <i class="m-auto fa-brands fa-bootstrap fa-3x"></i>
           <p class="m-auto">Bootstrap</p>
         </div>
@@ -221,15 +222,15 @@
           <img class="w-12 h-12 m-auto" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/600px-Tailwind_CSS_Logo.svg.png?20211001194333" alt="">
           <p class="m-auto text-sky-400">Tailwind CSS</p>
         </div>
-        <div class="flex flex-col text-reactjs-color py-7 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="700">
+        <div class="flex flex-col text-reactjs-color py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="700">
           <i class="m-auto fa-brands fa-react fa-3x"></i>
           <p class="m-auto">React Js</p>
         </div>
-        <div class="flex flex-col text-laravel-color py-7 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="800">
+        <div class="flex flex-col text-laravel-color py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="800">
           <i class="m-auto fa-brands fa-laravel fa-3x"></i>
           <p class="m-auto">Laravel</p>
         </div>
-        <div class="flex flex-col py-7 md:py-10 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="900">
+        <div class="flex flex-col py-7 md:py-10 dark:text-slate-200 backdrop-blur-md rounded-2xl bg-white/70 dark:bg-slate-900/80" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="900">
           <img class="m-auto " src="https://www.vectorlogo.zone/logos/mysql/mysql-ar21.svg" alt="">
           <p class="m-auto text-mysql-color">Mysql</p>
         </div>
