reactor code tahap 3

--- a/src/index.html
+++ b/src/index.html
@@ -242,9 +242,9 @@
   <!-- sertifikat 4 -->
   <div class="dark:bg-slate-900">
     <div id="sertifikat" x-data="{}" class="container px-4 py-24 m-auto lg:px-20">
-        <h2 class="text-4xl font-semibold dark:text-slate-200" data-aos="fade-down" data-aos-duration="2000">sertifikat</h2>
-        <hr class="h-1 mt-6 w-28 bg-fuchsia-600" data-aos="fade-down" data-aos-duration="2000">
-        <div class="grid mt-20 gap-y-6 md:gap-y-0 md:gap-x-4 md:grid-cols-2">
+        <h2 class="text-4xl font-semibold dark:text-slate-200" data-aos="fade-down">sertifikat</h2>
+        <hr class="h-1 mt-6 w-28 bg-fuchsia-600" data-aos="fade-down">
+        <div class="grid mt-20 gap-y-6 md:gap-y-5 md:gap-x-4 md:grid-cols-3">
           <a 
             @click="$dispatch('img-modal', {  imgModalSrc: 'img/71967822.jpg' })"
             data-aos="fade-down" 
@@ -262,6 +262,50 @@
           >
             <img class="w-full bg-center bg-cover dark:brightness-50 " src="img/09-05-28-UC-d287a9ee-e49f-4f7f-a1ca-eacd2c469a8d.jpg" alt="">
           </a>
+          <a 
+            @click="$dispatch('img-modal', {  imgModalSrc: 'https://udemy-certificate.s3.amazonaws.com/image/UC-a0b7b6e6-8b3e-4a3e-9f33-f7ec1b1e5b25.jpg' })"
+            data-aos="fade-down" 
+            data-aos-duration="3000"
+            class="overflow-hidden transition duration-500 shadow-lg cursor-pointer wounded-2xl hover:shadow-xl"
+          >
+            <img class="w-full bg-center bg-cover dark:brightness-50" src="https://udemy-certificate.s3.amazonaws.com/image/UC-a0b7b6e6-8b3e-4a3e-9f33-f7ec1b1e5b25.jpg" alt="">
+          </a>
+          <a
+            @click="$dispatch('img-modal', {  imgModalSrc: 'img/sertifikat_course_123_1395082_070324203131_pages-to-jpg-0001.jpg' })" 
+            data-aos="fade-down" 
+            data-aos-duration="3000"
+            data-aos-delay="100"
+            class="overflow-hidden transition duration-500 shadow-lg cursor-pointer wounded-2xl hover:shadow-xl"
+          >
+            <img class="w-full bg-center bg-cover dark:brightness-50 " src="img/sertifikat_course_123_1395082_070324203131_pages-to-jpg-0001.jpg" alt="">
+          </a>
+          <a
+            @click="$dispatch('img-modal', {  imgModalSrc: 'img/sertifikat_course_256_1395082_240323133705_pages-to-jpg-0001.jpg' })" 
+            data-aos="fade-down" 
+            data-aos-duration="3000"
+            data-aos-delay="100"
+            class="overflow-hidden transition duration-500 shadow-lg cursor-pointer wounded-2xl hover:shadow-xl"
+          >
+            <img class="w-full bg-center bg-cover dark:brightness-50 " src="img/sertifikat_course_256_1395082_240323133705_pages-to-jpg-0001.jpg" alt="">
+          </a>
+          <a
+            @click="$dispatch('img-modal', {  imgModalSrc: 'img/sertifikat_course_256_1395082_240323133705_pages-to-jpg-0001.jpg' })" 
+            data-aos="fade-down" 
+            data-aos-duration="3000"
+            data-aos-delay="100"
+            class="overflow-hidden transition duration-500 shadow-lg cursor-pointer wounded-2xl hover:shadow-xl"
+          >
+            <img class="w-full bg-center bg-cover dark:brightness-50 " src="img/sertifikat_course_256_1395082_240323133705_pages-to-jpg-0001.jpg" alt="">
+          </a>
+          <a
+            @click="$dispatch('img-modal', {  imgModalSrc: 'img/sertifikat_course_261_1395082_200523101403_pages-to-jpg-0001' })" 
+            data-aos="fade-down" 
+            data-aos-duration="3000"
+            data-aos-delay="100"
+            class="overflow-hidden transition duration-500 shadow-lg cursor-pointer wounded-2xl hover:shadow-xl"
+          >
+            <img class="w-full bg-center bg-cover dark:brightness-50 " src="img/sertifikat_course_261_1395082_200523101403_pages-to-jpg-0001" alt="">
+          </a>
         </div>
     </div>
   </div>
@@ -269,7 +313,7 @@
 
   <!-- section5 projek -->
 
-  <!-- <div id="projek" class="bg-slate-100 dark:bg-slate-800">
+  <div id="projek" class="bg-slate-100 dark:bg-slate-800">
     <div class="container px-4 py-24 m-auto lg:px-20">
       <h2 class="text-4xl font-semibold dark:text-slate-200" data-aos="fade-down" data-aos-duration="2000">Projek Saya</h2>
       <hr class="h-1 mt-6 w-28 bg-fuchsia-600" data-aos="fade-down" data-aos-duration="2000">
@@ -330,7 +374,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <!-- end section5 projek -->
 
