refactor code tahap 4

--- a/src/index.html
+++ b/src/index.html
@@ -321,8 +321,27 @@
         <div class="overflow-hidden transition duration-500 bg-white border hover:shadow-md rounded-xl dark:bg-slate-900 dark:border-slate-700" data-aos="fade-down" data-aos-duration="2000">
           <img class="rounded-xl dark:brightness-75" src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" alt="">
           <div class="flex justify-between">
-            <h5 class="p-4 text-md dark:text-slate-200">Lorem ipsum dolor sit amet.</h5>
-            <a href="" class="p-4 transition duration-500 hover:bg-slate-200 dark:text-slate-200 dark:hover:bg-slate-700">
+            <div>
+              <h5 class="p-4 text-md dark:text-slate-200">Arsip Perekapan dan Pemusnahan Pengadilan Negeri Kupang</h5>
+              <div class="flex gap-x-5 p-4">
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-html5 fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-css3-alt fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-js fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-bootstrap fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-laravel fa-xl"></i>
+                </div>
+              </div>
+            </div>
+            <a href="https://github.com/jufron/arsip_rekapan_dan_pemusnahan" target="_blank" class="p-4 transition duration-500 hover:bg-slate-200 dark:text-slate-200 dark:hover:bg-slate-700">
               <i class="fa-brands fa-github fa-lg"></i>
             </a>
           </div>
@@ -330,8 +349,27 @@
         <div class="overflow-hidden transition duration-500 bg-white border hover:shadow-md rounded-xl dark:bg-slate-900 dark:border-slate-700" data-aos="fade-down" data-aos-duration="2000">
           <img class="rounded-xl dark:brightness-75" src="https://images.unsplash.com/photo-1454165205744-3b78555e5572?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="">
           <div class="flex justify-between">
-            <h5 class="p-4 text-md dark:text-slate-200">Lorem ipsum dolor sit amet.</h5>
-            <a href="" class="p-4 transition duration-500 hover:bg-slate-200 dark:text-slate-200 dark:hover:bg-slate-700">
+            <div>
+              <h5 class="p-4 text-md dark:text-slate-200">Sistem Informasi Kenaikan Pangkat.</h5>
+              <div class="flex gap-x-5 p-4">
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-html5 fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-css3-alt fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-js fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-bootstrap fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-laravel fa-xl"></i>
+                </div>
+              </div>
+            </div>
+            <a href="https://github.com/jufron/sistem_informasi_kenaikan_pangkat" target="_blank" class="p-4 transition duration-500 hover:bg-slate-200 dark:text-slate-200 dark:hover:bg-slate-700">
               <i class="fa-brands fa-github fa-lg"></i>
             </a>
           </div>
@@ -339,13 +377,32 @@
         <div class="overflow-hidden transition duration-500 bg-white border hover:shadow-md rounded-xl dark:bg-slate-900 dark:border-slate-700" data-aos="fade-down" data-aos-duration="2000">
           <img class="rounded-xl dark:brightness-75" src="https://images.unsplash.com/photo-1551419762-4a3d998f6292?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fHByb2dyYW1pbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="">
           <div class="flex justify-between">
-            <h5 class="p-4 text-md dark:text-slate-200">Lorem ipsum dolor sit amet.</h5>
-            <a href="" class="p-4 transition duration-500 hover:bg-slate-200 dark:text-slate-200 dark:hover:bg-slate-700">
+            <div>
+              <h5 class="p-4 text-md dark:text-slate-200">Aplikasi Profile Sekolah</h5>
+              <div class="flex gap-x-5 p-4">
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-html5 fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-css3-alt fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-js fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-bootstrap fa-xl"></i>
+                </div>
+                <div class="dark:text-slate-200 p-5 dark:bg-slate-800 rounded-lg">
+                  <i class="fa-brands fa-laravel fa-xl"></i>
+                </div>
+              </div>
+            </div>
+            <a href="https://github.com/jufron/laravel-app-school" target="_blank" class="p-4 transition duration-500 hover:bg-slate-200 dark:text-slate-200 dark:hover:bg-slate-700">
               <i class="fa-brands fa-github fa-lg"></i>
             </a>
           </div>
         </div>
-        <div class="overflow-hidden transition duration-500 bg-white border hover:shadow-md rounded-xl dark:bg-slate-900 dark:border-slate-700" data-aos="fade-down" data-aos-duration="2000">
+        <!-- <div class="overflow-hidden transition duration-500 bg-white border hover:shadow-md rounded-xl dark:bg-slate-900 dark:border-slate-700" data-aos="fade-down" data-aos-duration="2000">
           <img class="rounded-xl dark:brightness-75" src="https://images.unsplash.com/photo-1623479322729-28b25c16b011?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="">
           <div class="flex justify-between">
             <h5 class="p-4 text-md dark:text-slate-200">Lorem ipsum dolor sit amet.</h5>
@@ -371,7 +428,7 @@
               <i class="fa-brands fa-github fa-lg"></i>
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -386,13 +443,13 @@
         <div class="m-auto mt-20 md:w-3/5">
           <form action="">
             <label class="block w-full mb-3 text-xl dark:text-slate-200" for="email" data-aos="zoom-out-right" data-aos-duration="2000">Email</label>
-            <input class="block w-full transition duration-500 rounded-lg border-fuchsia-400 focus:outline-none focus:ring focus:ring-fuchsia-600 dark:bg-slate-800" type="email" id="email" data-aos="fade-down" data-aos-duration="2000">
+            <input class="block w-full p-5 dark:text-slate-200 transition duration-500 rounded-lg border-fuchsia-400 focus:outline-none focus:ring focus:ring-fuchsia-600 dark:bg-slate-800" type="email" id="email" data-aos="fade-down" data-aos-duration="2000">
   
             <label class="block w-full mt-5 mb-3 text-xl dark:text-slate-200" for="subject" data-aos="zoom-out-right" data-aos-duration="2000" data-aos-delay="200">Subjek</label>
-            <input class="block w-full transition duration-500 rounded-lg border-fuchsia-400 focus:outline-none focus:ring focus:ring-fuchsia-600 dark:bg-slate-800" type="text" id="subjext" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="200">
+            <input class="block w-full p-5 dark:text-slate-200 transition duration-500 rounded-lg border-fuchsia-400 focus:outline-none focus:ring focus:ring-fuchsia-600 dark:bg-slate-800" type="text" id="subjext" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="200">
   
             <label class="block w-full mt-5 mb-3 text-xl dark:text-slate-200" for="pesan" data-aos="zoom-out-right" data-aos-duration="2000" data-aos-delay="400">Pesan</label>
-            <textarea class="block w-full transition duration-500 rounded-lg border-fuchsia-400 foucs:outline-none foucs:ring focus:ring-fuchsia-600 dark:bg-slate-800" name="pesan" id="pesan" cols="30" rows="6" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="400"></textarea>
+            <textarea class="block w-full p-5 dark:text-slate-200 transition duration-500 rounded-lg border-fuchsia-400 foucs:outline-none foucs:ring focus:ring-fuchsia-600 dark:bg-slate-800" name="pesan" id="pesan" cols="30" rows="6" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="400"></textarea>
           </form>
         </div>
     </div>
